[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu/MenuP1.gd" type="Script" id=1]
[ext_resource path="res://Correct/CPic.tscn" type="PackedScene" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 538.0
margin_top = 10.0
margin_right = 1007.0
margin_bottom = 420.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 469.0
margin_bottom = 410.0
rect_min_size = Vector2( 80, 40 )

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 469.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
text = "Play"

[node name="Speed" type="OptionButton" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 469.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 60 )
text = "Speed"
items = [ "Speed", null, false, 0, null, "argo", null, false, 1, null, "Kanoniko", null, false, 2, null, "Grigoro", null, false, 3, null ]
selected = 0

[node name="Quantity" type="OptionButton" parent="MarginContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 469.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 60 )
text = "Quantity"
items = [ "Quantity", null, false, 0, null, "2", null, false, 1, null, "4", null, false, 2, null, "6", null, false, 3, null ]
selected = 0

[node name="Total" type="OptionButton" parent="MarginContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 469.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 60 )
text = "Total"
items = [ "Total", null, false, 0, null, "6", null, false, 1, null, "10", null, false, 2, null, "16", null, false, 3, null ]
selected = 0

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 469.0
margin_bottom = 316.0
rect_min_size = Vector2( 469, 60 )
text = "Quit"

[node name="Label" type="Label" parent="."]
margin_left = 28.0
margin_top = 229.0
margin_right = 273.0
margin_bottom = 284.0
text = "This is the correct Photo for the game 
you are about to play please select
this photo when shown in game!"

[node name="Node2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 148, 408 )
script = null

[node name="Label2" type="Label" parent="."]
margin_left = 863.0
margin_top = 540.0
margin_right = 997.0
margin_bottom = 564.0
text = "prod by Peter Roditis"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Speed" to="." method="_on_Speed_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Quantity" to="." method="_on_Quantity_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Total" to="." method="_on_Total_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
